chandeliers-lus/tests/compile_fail/ui/options/malformed.rs
chandeliers_lus::decl! {
    #[mai]
    node system() returns ();
    let tel
}

fn main() {}
