chandeliers-lus/tests/compile_fail/ui/options/malformed.stderr
error: Malformed attribute mai: no such attribute
 --> tests/fail/ui/options/malformed.rs:2:5
  |
2 |     #[mai]
  |     ^^^^^^
  |
  = note: See the available options and their definition at https://github.com/Vanille-N/chandeliers
